papers/paper35/v1.1/README.md
# Paper 35 v1.1 Reproducibility Bundle

This bundle supports Paper 35 v1.1 of the Interior Observer framework, covering
the eta derivation chain, BBN temperature assignment, chiral source-era
diagnostic, leptogenesis target reduction, baryogenesis theorem-surface
registry, JWST timing table, DESI active-branch confrontation, and geometric
dark-sector consistency check. The associated manuscript record will be linked
from Zenodo after v1.1 publication.

## Quickstart

```bash
git clone https://github.com/dfife/io-framework-public.git
cd io-framework-public/papers/paper35/v1.1
python3 scripts/09_validate_expected_outputs.py
```

Expected final line:

```text
SUMMARY total_checks=30 pass_count=30 fail_count=0
```

## Detailed Reproduction

To regenerate the frozen JSON outputs:

```bash
python3 scripts/01_eta_derivation_chain.py
python3 scripts/02_temperature_assignment.py
python3 scripts/03_chiral_source_diagnostic.py
python3 scripts/04_leptogenesis_target_reduction.py
python3 scripts/05_baryogenesis_registry_summary.py
python3 scripts/06_jwst_formation_time_table.py
python3 scripts/07_desi_confrontation.py
python3 scripts/08_dark_matter_null_forecast.py
python3 scripts/09_validate_expected_outputs.py
```

Script 07 fetches public DESI DR2 files and validates SHA256 checksums. No
external observational datasets are redistributed in this bundle.

## Discipline Statement

This bundle separates framework-specific reproduction from standard-literature
inputs and external observational data:

- Reproduced in scripts: IO eta chain, temperature assignment, chiral diagnostic,
  DESI active-branch calculation, JWST timing table, `f_b = 2 gamma / x`, and
  the kappa/conditional registry.
- Cited, not rederived: Davidson-Ibarra bound, sphaleron conversion,
  Casas-Ibarra parameterization, standard type-I seesaw equations, standard
  Boltzmann leptogenesis equations, blackbody photon number density, and
  mean-baryon-mass conventions.
- Cited/fetched/checksummed, not redistributed: DESI DR2 BAO files, Planck
  likelihoods, JWST observational products, and direct-detection limit data.

The theorem registry contains 48 surfaces: 15 `CLEAN` and 33
`CONDITIONAL_VERIFIED`. Conditional surfaces support audit-trail and
scope-tracking. They must not be cited as unconditional theorem closure.

## Contents

- `scripts/`: nine public reproduction/validation scripts.
- `data/`: constants, source pointers, external-data discipline, and theorem
  registry metadata.
- `results/`: frozen JSON outputs generated by scripts 01-08.
- `reports/`: kappa audit, conditional audit, and theorem-registry reports.
- `environment/`: Python version, requirements, system package notes, and
  randomness/seed statement.

## Citation

If you use this bundle, cite the Paper 35 v1.1 manuscript and the GitHub release:

```text
David Fife, Paper 35 v1.1 Reproducibility Bundle,
Interior Observer Framework public reproducibility repository,
GitHub release paper35-v1.1, May 2026.
https://github.com/dfife/io-framework-public/releases/tag/paper35-v1.1
```

Machine-readable citation metadata is provided in `CITATION.cff`.
